--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,38 +5,130 @@
   text-align: center;
 }
 
+a {
+  color: #EF5840;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+/* NAVBAR start */
+.navBar {
+  position:absolute;
+  display: grid;
+  grid-template-rows: [row1-start]2fr [row2-start]8fr [row3-start]1fr;
+  grid-template-columns: [only]1fr;
+  width: 250px;
+  top: 0;
+  left:0;
+  padding: 30px 30px;
+  padding-bottom:5px;
+  height: 100vh;
+  border-radius: 0 20px 20px 0;
+  box-shadow: 5px 0 10px #00000090;
+  transition: .7s ease-in-out;
+}
+.navBar.hidden{
+  transform: translateX(-240px);
+}
+.navBar.hidden button {
+  width: 50%;
+}
+
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+  grid-row-start: row1-start;
+  grid-column-start: only;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#burger-menu{
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+nav ul {
+  height: 50vh;
+  list-style: none;
+  width: 100%;;
+  padding: 0;
+}
+nav ul li {
+  margin: 0;
+  padding: 0;
+  width:100%;
 }
 
-.card {
-  padding: 2em;
+nav ul li button{
+  cursor: pointer;
+  font-size: 1rem;
+  background:#ffffff10;
+  padding: 20px 30px;
+  border: none;
+  width: 100%;
+  border-radius: 10px;
+  text-align: left;
+  margin-bottom:20px;
+  transition: 1s ease-in-out width;
 }
 
-.read-the-docs {
-  color: #888;
+nav ul li button::before{
+  color: #EF5840;
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  padding-right: 20px;
 }
+
+
+button#projects::before{
+  font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f0ae";
+}
+button#dashboard::before{
+  font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f00b";
+}
+button#create::before{
+  font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f044";
+}
+
+.bottom-nav {
+  grid-row-start: row3-start;
+  grid-column-start: only;
+  text-align: left;
+}
+
+#copyright::after{
+  font-family: "Font Awesome 5 Free";
+  font-weight: 400;
+  content: "\f004";
+  color: #EF5840;
+}
+/* NAVBAR end */
+
+/* TABLE start */
+.table-container {
+  padding:0 20px;
+  background: #ffffff10;
+  border-radius: .7rem;
+}
+table {
+  border-collapse: collapse;
+  border-radius: .7rem;
+  overflow: hidden;
+  padding:0 20px;
+}
+
+th, td {
+  background: #ffffff10;
+  padding: 20px;
+}
+th{
+  border-bottom: 1px solid #eeeeee;
+}
+td:first-child, th:first-child{
+  text-align: left;
+}
+td , th{
+  text-align: right;
+}
+
+/* TABLE end */
